--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                     </p>
                 </article>
             </section>
+            <h1 class="titulovideo">Descobra a sua casa de Hogwarts!</h1>
             <div class="video">
-                <h1>Descobra a sua casa de Hogwarts!</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/IKlwzyN7CT8?si=Q7YB1zsR_s-pSCSi"
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
                 gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
